# screen-session-manager

./: .clang-format  CMakeLists.txt  README.md
docs/: hosts.json
src/: AbstractCommandExecutor.cpp  AbstractCommandExecutor.h  ICommandExecutor.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  NewSessionDialog.cpp  NewSessionDialog.h  NewSessionDialog.ui  ScreenManager.cpp  ScreenManager.h  ScreenSessionModel.cpp  ScreenSessionModel.h  ShellCommandExecutor.cpp  ShellCommandExecutor.h  SingleThreadTaskExecutor.cpp  SingleThreadTaskExecutor.h  SshCommandExecutor.cpp  SshCommandExecutor.h  SshHostConfig.cpp  SshHostConfig.h  SshHostConfigDialog.cpp  SshHostConfigDialog.h  SshHostConfigDialog.ui  SshSession.cpp  SshSession.h  TaskExecutor.cpp  TaskExecutor.h  main.cpp
src/terminal/: CMakeLists.txt
src/terminal/libvterm/: CMakeLists.txt
